# Financials-AI

./: .gitignore  .gitingore  Dockerfile  README.md  devops_prompt.md  docker-compose-app.yml  docker-compose-elk.yml  docker-compose.yml  docker-compose_old.yml  docker-compose_simple.yml  docker_info.md  documentation_token.md  how_run.md  infra.md  install_missing.py  monitoring_prompt.md  pyproject.toml  start_dev_windows.bat  start_docker_dev.bat  structure.sh  todo.md
backend/: celery_app.py  clean_requirements.txt  database.py  dependencies.py  downloaded_report.docx  main.py  package-lock.json  req3.txt  requirements.txt  requirements_old_1.txt  tasks.py
backend/auth/: dependencies.py
backend/config/: settings.py
backend/models/: info_models.py  report.py  search_models.py  user.py
backend/processors/: workflow.py  workflow2.py  workflow3.py
backend/processors/financials/: extractor2.py  extractor3.py
backend/processors/ocr/: processing.py
backend/processors/reporting/: generator.py  generator2.py
backend/processors/valuation/: valuator2.py
backend/routes/: auth.py  chat.py  dashboard.py  financials.py  health.py  info.py  reports.py  search.py
backend/searching/: scraping_methods.py
backend/searching/scraping_scripts/: ico_company_scraper.py  ico_file_scraper.py  name_company_scraper.py
backend/services/: user_service.py
backend/services/info_search/: company_analyzer.py  dotace.py  dph_info.py  ico_name.py  justice_info.py  main_workflow.py
backend/services/processors/: workflow.py  workflow2.py  workflow3.py
backend/services/searching/: scraping_methods.py
backend/storage/: report_archive.py  seed_db.py
backend/temp/: html_content.html
backend/tests/: conftest.py  test_api_server.py  test_health_routes.py  test_ico_scraper.py  test_search.py  test_supabase.py  test_valuator.py  test_workflow.py
backend/utils/: usage_limiter.py
elk/filebeat/config/: filebeat-backend.yml  (+4 more)
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.tsx  index.css  main.tsx  theme.ts  types.d.ts
monitoring/: blackbox.yml  prometheus.yml
nginx/: Dockerfile  nginx.conf
temp_downloads/: html_content_not_pdf.html
(+43 files in other folders)
