[tool.poetry]
name = "financialsai"
version = "0.1.0"
description = ""
authors = ["janf19 <jfaller@seznam.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
supabase = "^2.15.0"
jwt = "^1.3.1"
python-jose = "^3.4.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
