[tool.poetry]
name = "financialsai"
version = "0.1.0"
description = ""
authors = ["janf19 <jfaller@seznam.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
supabase = "^2.15.0"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pytest = "^8.3.5"
fastapi = "^0.115.12"
pytest-asyncio = "^0.26.0"
httpx = "0.28.1"
requests = "2.32.3"
dotenv = "0.9.9"
mistralai = "1.5.1"
markdown = "3.7"
annotated-types = "0.7.0"
anyio = "4.8.0"
beautifulsoup4 = "4.13.3"
bs4 = "0.0.2"
certifi = "2025.1.31"
charset-normalizer = "3.4.1"
click = "8.1.8"
colorama = "0.4.6"
contourpy = "1.3.1"
cycler = "0.12.1"
distro = "1.9.0"
et-xmlfile = "2.0.0"
eval-type-backport = "0.2.2"
fonttools = "4.56.0"
h11 = "0.14.0"
httpcore = "1.0.7"
idna = "3.10"
jiter = "0.9.0"
jsonpath-python = "1.0.6"
kiwisolver = "1.4.8"
lxml = "5.3.1"
matplotlib = "3.10.1"
mypy-extensions = "1.0.0"
numpy = "2.2.3"
openai = "1.68.2"
openpyxl = "3.1.5"
packaging = "24.2"
pandas = "2.2.3"
pillow = "11.1.0"
pydantic-core = "2.27.2"
pydantic-settings = "2.8.1"
pydantic = "2.10.6"
pyparsing = "3.2.1"
python-dateutil = "2.9.0.post0"
python-docx = "1.1.2"
python-dotenv = "1.0.1"
pytz = "2025.1"
six = "1.17.0"
sniffio = "1.3.1"
soupsieve = "2.6"
tqdm = "4.67.1"
typing-extensions = "4.12.2"
typing-inspect = "0.9.0"
tzdata = "2025.1"
urllib3 = "2.3.0"
pyjwt = "2.3.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
email-validator = "^2.2.0"
python-multipart = "^0.0.20"
selenium = "^4.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
